--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Advent of code 2022</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <div id="app">
+      <div class="card">
+        <h1>Advent of code 2022</h1>
+        <p>Nothing to see here yet.</p>
+        <button>
+          <a href="https://github.com/pachoclo/advent-of-code-2022/tree/main/src">GitHub repo</a>
+        </button>
+      </div>
+    </div>
   </body>
+  <script type="module">
+    import '/src/style.css'
+  </script>
 </html>
